<resources>
    <string name="app_name">Al Maajid</string>
    <string name="halo">halo</string>
    <string name="splashScreenImage">gambar untuk splash screen</string>
    <string name="LOGINPAGE">CONTINUE</string>
    <string name="gambar_masjid">gambar masjid</string>
    <string name="judul_login_page">judul login page</string>
    <string name="deskripsi_login_page">deskripsi login page</string>
    <string name="apalah">apalah</string>
    <string name="LoginButton">Continue</string>
    <string name="bacgorud_utama">bacgorud utama</string>
    <string name="bottom_canvas">bottom canvas</string>
    <string name="welcome">welcome</string>
    <string name="deskripsi_selanjtunya">deskripsi selanjtunya</string>
    <string name="welcome_tittle">Welcome\nto Al Maajid</string>
    <string name="button_continue">Selanjutnya</string>
    <string name="hint_entername">Masukkan nama panggilanmu</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="salam">Assalamualaikum!</string>
    <string name="nama">Nama</string>
    <string name="welcome_text">Ahlan Wa Sahlan\nDicoding!</string>
    <string name="button_about">button about</string>
    <string name="detail">Detail</string>
    <string name="masjid_terbesar">Daftar Masjid Terbesar di Indonesia</string>
    <string name="back_to_main">Cari di Google</string>
    <string name="share">Share</string>
    <string name="opening_description">Selamat Datang di Al Maajid, ayo cari tahu lebih lanjut!</string>
    <string name="gambar_untuk_login_page">gambar untuk login page</string>
    <string name="dummy_judul">Ini Judul</string>
    <string name="dummy_deskripsi">Ini Deskripsi</string>
    <string name="dummy_luasTanah">Luas Tanah/Bangunan</string>
    <string name="dummy_valueLuas">200,000 meter persegi</string>
    <string name="dummy_kapasitas_jemaah">Kapasitas Jemaah</string>
    <string name="dummy_value_jemaah">200,000 Jemaah</string>
    <string name="dummy_tanggalPeresmian">Tanggal/Tahun Peresmian</string>
    <string name="dummy_valueperesmian">14 Agustus 1990</string>
    <string name="dumm_alamat">Alamat</string>
    <string name="dummy_valueAlamat">Ini alamat</string>
    <string name="dummy_image">konten picture</string>
    <string name="name_develop">Moch. Andi Divangga Pratama</string>
    <string name="deskripsi_develop">Halo semua, ini adalah aplikasi mobile android pertama saya yang dibuat menggunakan kotlin.\nenjoy the app !</string>
    <string name="email_develop">andid8323@gmail.com</string>
</resources>