<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MosqueDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="235dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/alakbar_surabaya_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/gradient_detail"
                    android:contentDescription="@string/dummy_image" />

                <TextView
                    android:id="@+id/judul_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="17dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/dummy_judul"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="80dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/deskripsi_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/dummy_deskripsi"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/dummy_luasTanah" />

                <TextView
                    android:id="@+id/tv_luasBangunan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/dummy_valueLuas" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/dummy_kapasitas_jemaah" />

                <TextView
                    android:id="@+id/tv_jumlahJemaah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/dummy_value_jemaah" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black"
                    android:layout_marginEnd="16dp"
                    android:textSize="14sp"
                    android:text="@string/dummy_tanggalPeresmian" />

                <TextView
                    android:id="@+id/tv_tahunPeresmian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:text="@string/dummy_valueperesmian" />

            </TableRow>

        </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/dumm_alamat"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/alamat_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/dummy_valueAlamat"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_to_halamanUtama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/back_to_main"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/action_share"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/share"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_to_halamanUtama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_to_halamanUtama" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>