<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp"
    tools:context=".EnterNameActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salam"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/edt_theName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/montserrat_regular"
        android:foregroundTint="#FFFFFF"
        android:hint="@string/hint_entername"
        android:inputType="textCapSentences"
        android:backgroundTint="@color/gold"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_EnterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/my_button"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/selanjutnya"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>