<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"

    android:fitsSystemWindows="true"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/Theme.MaterialComponents.Light.ini"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fitsSystemWindows="true"

        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_scrollFlags="scroll">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="-112dp"
                android:layout_marginBottom="-30dp"

                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"

                android:src="@drawable/ic_vector_fix" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/backbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginEnd="30dp"

                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    tools:text="@string/welcome_text"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/about_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="257dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="30dp"

                    android:theme="@style/Theme.MaterialComponents.Light.ini"
                    android:backgroundTint="@color/gold_muda"
                    android:src="@drawable/ic_ini_grup"

                    app:borderWidth="0dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:contentDescription="@string/button_about" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/masjid_terbesar"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="14sp"
            android:textColor="@color/gold"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_Mosque"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:listitem="@layout/card_item">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>